--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "example": "example"
   },
   "scripts": {
-    "dev": "webpack -w & http-server -c-1"
+    "dev": "webpack -w & http-server -c-1",
+    "build": "webpack -p --config webpack.prod.config.js"
   },
   "repository": {
     "type": "git",
@@ -32,6 +33,8 @@
     "babel-preset-stage-0": "^6.5.0",
     "babel-runtime": "^6.6.1",
     "css-loader": "^0.23.1",
+    "es6-promise": "^3.1.2",
+    "extract-text-webpack-plugin": "^1.0.1",
     "http-server": "^0.9.0",
     "jquery": "^2.2.3",
     "less": "^2.6.1",
